# HarmoyPjsipDemo

./: build-profile.json5  log.txt
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  audio_backend_default.cpp  audio_backend_default.h  audio_backend_oha.cpp  audio_backend_oha.h  log.cpp  log.h  my_account.cpp  my_account.h  my_call.cpp  my_call.h  napi_init.cpp  oh_audio_backend.cpp  oh_audio_backend.h  sip_app.cpp  sip_app.h
entry/src/main/cpp/types/libentry/: Index.d.ts  oh-package.json5
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: CallPage.ets  Index.ets  SipObserver.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/base/profile/: router_map.json
entry/src/mock/: mock-config.json5
